force-app/main/default/objects/UserUnit__c/UserUnit__c.object-meta.xml
<CustomObject>
    <label>UserUnit</label>
    <nameField>
        <label>UserUnit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UserUnits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>