force-app/main/default/objects/UserUnit__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>UserUnits</relationshipLabel>
    <relationshipName>UserUnits</relationshipName>
    <type>Lookup</type>
</CustomField>