force-app/main/default/objects/UserUnit__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>UserUnits</relationshipLabel>
    <relationshipName>UserUnits</relationshipName>
    <type>Lookup</type>
</CustomField>