force-app/main/default/objects/UserUnit__c/fields/UserModule__c.field-meta.xml
<CustomField>
    <fullName>UserModule__c</fullName>
    <label>UserModule</label>
    <referenceTo>UserModule__c</referenceTo>
    <relationshipLabel>UserUnits</relationshipLabel>
    <relationshipName>UserUnits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>