force-app/main/default/objects/UserUnit__c/fields/UserOption__c.field-meta.xml
<CustomField>
    <fullName>UserOption__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UserOption</label>
    <referenceTo>UserOption__c</referenceTo>
    <relationshipLabel>UserOptions</relationshipLabel>
    <relationshipName>UserOptions</relationshipName>
    <type>Lookup</type>
</CustomField>